source/stylesheets/creative.less
@import "variables.less";
@import "mixins.less";

// Global Components
html,
body {
    height: 100%;
    width: 100%;
}

body {
    .serif-font;
}

hr {
    border-color: @theme-primary;
    border-width: 3px;
    max-width: 50px;
}

hr.light {
    border-color: white;
}

a {
    .transition-all;
    color: #fff;
    &:hover,
    &:focus {
        color: #fff;
    }
}

h1,
h2,
h3,
h4,
h5,
h6 {
    .sans-serif-font;
}

p {
    font-size: 16px;
    line-height: 1.5;
    margin-bottom: 20px;
}

.bg-primary {
    background-color: @theme-primary;
}

.bg-dark {
    background-color: @gray-darker;
    color: white;
}

.text-faded {
    color: fade(white, 70%);
}

section {
    padding: 100px 0;
}

aside {
    padding: 50px 0;
}

.no-padding {
    padding: 0;
}

// Navigation

.navbar-default {
    background-color: white;
    border-color: fade(@gray-darker, 5%);
    .sans-serif-font;
    .transition-all;
    .navbar-header .navbar-brand {
        color: @theme-primary;
        .sans-serif-font;
        font-weight: 700;
        text-transform: uppercase;
        &:hover,
        &:focus {
            color: darken(@theme-primary, 10%);
        }
    }
    .navbar-header .navbar-toggle {
        font-weight: 700;
        font-size: 12px;
        color: @gray-darker;
        text-transform: uppercase;
    }
    .nav {
        > li {
            > a,
            > a:focus {
                text-transform: uppercase;
                font-weight: 700;
                font-size: 13px;
                color: @gray-darker;
                &:hover {
                    color: @theme-primary;
                }
            }
            &.active {
                > a,
                > a:focus {
                    color: @theme-primary !important;
                    background-color: transparent;
                    &:hover {
                        background-color: transparent;
                    }
                }
            }
        }
    }
    @media (min-width: 768px) {
        background-color: transparent;
        border-color: fade(white, 30%);
        .navbar-header .navbar-brand {
            color: fade(white, 70%);
            &:hover,
            &:focus {
                color: white;
            }
        }
        .nav > li > a,
        .nav > li > a:focus {
            color: fade(white, 70%);
            &:hover {
                color: white;
            }
        }
        &.affix {
            background-color: white;
            border-color: fade(@gray-darker, 5%);
            .navbar-header .navbar-brand {
                color: @theme-primary;
                font-size: 14px;
                &:hover,
                &:focus {
                    color: darken(@theme-primary, 10%);
                }
            }
            .nav > li > a,
            .nav > li > a:focus {
                color: @gray-darker;
                &:hover {
                    color: @theme-primary;
                }
            }
        }
    }
}


.guide-nav-bar.navbar-default.affix .navbar-header .navbar-brand {
  color: white;
}

.navbar-default.guide-nav-bar {
  background-color: @theme-primary;

  .nav > li > a {
    color: white;

    &:hover {
      color: #e7e7e7;
    }
  }

  .navbar-brand {
    color: white;
  }
}

// Homepage Header

header {
    position: relative;
    width: 100%;
    min-height: auto;
    .background-cover;
    background-position: center;
    background-image: url('../images/header.jpg');
    text-align: center;
    color: white;
    .header-content {
        position: relative;
        text-align: center;
        padding: 100px 15px 100px;
        width: 100%;
        .header-content-inner {
            h1 {
                font-weight: 700;
                text-transform: uppercase;
                margin-top: 0;
                margin-bottom: 0;
                font-size: 30px;
            }
            hr {
                margin: 30px auto;
            }
            p {
                font-weight: 300;
                color: fade(white, 70%);
                font-size: 16px;
                margin-bottom: 50px;
            }
        }
    }
    @media (min-width: 768px) {
        min-height: 100%;
        .header-content {
            position: absolute;
            top: 50%;
            -webkit-transform: translateY(-50%);
            -ms-transform: translateY(-50%);
            transform: translateY(-50%);
            padding: 0 50px;
            .header-content-inner {
                max-width: 1000px;
                margin-left: auto;
                margin-right: auto;
                h1 {
                    font-size: 50px;
                }
                p {
                    font-size: 18px;
                    max-width: 80%;
                    margin-left: auto;
                    margin-right: auto;
                }
            }
        }
    }
}

// Sections

.section-heading {
    margin-top: 0;
}

.service-box {
    max-width: 400px;
    margin: 50px auto 0;
    @media (min-width: 992px) {
        margin: 20px auto 0;
    }
    p {
        margin-bottom: 0;
    }
}

.call-to-action {
    h2 {
        margin: 0 auto 20px;
    }
}

// Bootstrap Overrides
.text-primary {
    color: @theme-primary;
}

.no-gutter > [class*='col-'] {
    padding-right:0;
    padding-left:0;
}

// Button Styles
.btn-default {
    .button-variant(@gray-darker;white;white);
}

.btn-primary {
    .button-variant(white;@theme-primary;@theme-primary);
}

.btn {
    .sans-serif-font;
    border: none;
    border-radius: 300px;
    font-weight: 700;
    text-transform: uppercase;
}

.btn-xl {
    padding: 15px 30px;
}

// Extras
// -- Highlight Color Customization
::-moz-selection {
    color: white;
    text-shadow: none;
    background: @gray-darker;
}

::selection {
    color: white;
    text-shadow: none;
    background: @gray-darker;
}

img::selection {
    color: white;
    background: transparent;
}

img::-moz-selection {
    color: white;
    background: transparent;
}

body {
    webkit-tap-highlight-color: @gray-darker;
}

.horozontal-margin {
  margin-top: 20px;
}


.img-block {
  display: block;
  margin: auto;
  width: 60%;
}

// --Sidebar

.sidebar {

    .sidebar-nav.navbar-collapse {
        padding-left: 0;
        padding-right: 0;
    }
}

.sidebar .sidebar-search {
    padding: 15px;
}
@media (min-width: 768px){
  .navbar-default .nav > li > a, {
    color: rgb(34, 34, 34);
  }
}

.sidebar ul li {
    border-bottom: 1px solid darken(@gray-lightest, 6.5%);
    a {

        &.active {
            background-color: @gray-lighter;
        }
    }
}

.sidebar .arrow {
    float: right;
}

.sidebar .fa.arrow:before {
    content: "\f104";
}

.sidebar .active > a > .fa.arrow:before {
    content: "\f107";
}

.sidebar .nav-second-level li,
.sidebar .nav-third-level li {
    border-bottom: none !important;
}

.sidebar .nav-second-level li a {
    padding-left: 37px;
}

.sidebar .nav-third-level li a {
    padding-left: 52px;
}

@media(min-width:768px) {
    .sidebar {
        z-index: 1;
        position: fixed;
        width: 250px;
        margin-top: 51px;
    }

    .navbar-top-links .dropdown-messages,
    .navbar-top-links .dropdown-tasks,
    .navbar-top-links .dropdown-alerts {
        margin-left: auto;
    }
}

// Wrappers

#wrapper {
    width: 100%;
}

#page-wrapper {
    padding: 0 15px;
    min-height: 568px;
    background-color: white;
}

@media(min-width:768px) {
    #page-wrapper {
        position: inherit;
        margin: 0 0 0 250px;
        padding: 0 30px;
        border-left: 1px solid darken(@gray-lightest, 6.5%);
    }
}

// Navigation

// --Topbar

.navbar-top-links {
    margin-right: 0;
}

.navbar-top-links li {
    display: inline-block;
}

.navbar-top-links li:last-child {
    margin-right: 15px;
}

.navbar-top-links li a {
    padding: 15px;
    min-height: 50px;
}

.navbar-top-links .dropdown-menu li {
    display: block;
}

.navbar-top-links .dropdown-menu li:last-child {
    margin-right: 0;
}

.navbar-top-links .dropdown-menu li a {
    padding: 3px 20px;
    min-height: 0;
}

.navbar-top-links .dropdown-menu li a div {
    white-space: normal;
}

.navbar-top-links .dropdown-messages,
.navbar-top-links .dropdown-tasks,
.navbar-top-links .dropdown-alerts {
    width: 310px;
    min-width: 0;
}

.navbar-top-links .dropdown-messages {
    margin-left: 5px;
}

.navbar-top-links .dropdown-tasks {
    margin-left: -59px;
}

.navbar-top-links .dropdown-alerts {
    margin-left: -123px;
}

.navbar-top-links .dropdown-user {
    right: 0;
    left: auto;
}

.windows-install, .guides, .mac-install, .git-install {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}

hr.location-break {
  max-width: 100%;
}

a.inline-link {
   color: @theme-primary;
}

